force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <description
  >Age and skill groupings within a season (e.g., Atom AA, Peewee A)</description>
    <label>Division</label>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>