force-app/main/default/objects/Division__c/fields/Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Age__c</fullName>
    <description>Maximum age for players in this division</description>
    <label>Maximum Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>