force-app/main/default/objects/Division__c/fields/Min_Age__c.field-meta.xml
<CustomField>
    <fullName>Min_Age__c</fullName>
    <description>Minimum age for players in this division</description>
    <label>Minimum Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>