force-app/main/default/objects/Division__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Master-Detail relationship to the parent Season</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Divisions</relationshipLabel>
    <relationshipName>Divisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>