force-app/main/default/objects/Division__c/validationRules/Valid_Age_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Age_Range</fullName>
    <active>true</active>
    <description
  >Ensures minimum age is less than or equal to maximum age</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Min_Age__c)),
    NOT(ISBLANK(Max_Age__c)),
    Min_Age__c &gt; Max_Age__c
)</errorConditionFormula>
    <errorDisplayField>Min_Age__c</errorDisplayField>
    <errorMessage
  >Minimum age must be less than or equal to maximum age.</errorMessage>
</ValidationRule>